fixed bug of map not showing

--- a/public/css/group.css
+++ b/public/css/group.css
@@ -198,6 +198,12 @@
   
 
 
+/*----------- Content: Map Overview -----------*/
+  #test {
+    height: 50vh;
+  }
+
+
 /*----------- Content: Polls -----------*/
 
 
@@ -241,7 +247,7 @@
     }
 
 
-  /*----------- Content: members -----------*/
+  /*----------- Content: settings -----------*/
     #formGroup {
       margin-left: 10px;
     }
